[package]
name = "rg_make_issues"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
futures = "0.3.17"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
octocrab = "0.38.0"
secrecy = "0.8.0"
dotenv = "0.15.0"
